--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,12 +8,14 @@
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 5rem;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  margin: auto;
 }
 
 .footer {
@@ -21,8 +23,11 @@
   height: 100px;
   border-top: 1px solid #eaeaea;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
+  margin-bottom: 20px;
 }
 
 .footer img {
@@ -119,4 +124,17 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+
+.main li {
+  background-color: whitesmoke;
+  padding: 40px;
+  margin: 20px;
+  list-style-type: none;
+  width: 100%;
+}
+
+.main ul {
+  width: 100%;
 }
