--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,20 @@ a {
   box-sizing: border-box;
 }
 
+nav {
+  display: flex;
+  flex-direction: row;
+  align-content: stretch;
+  width: 100%;
+  margin: auto;
+  padding-bottom: 10px;
+  background-color: aliceblue;
+  padding: 7px;
+  margin: 5px;
+  font-size: large;
+  font-weight: 600;
+}
+
+nav a {
+  margin-left: 30px;
+}
